--- a/Grau_Satisfação_Sobrecarga.ipynb
+++ b/Grau_Satisfação_Sobrecarga.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1uRxS-HR5GVn03Tm717Fo5H5FXXZOgSFq",
-      "authorship_tag": "ABX9TyNj37EvC6uJdJAdDpHPzR7/",
+      "authorship_tag": "ABX9TyMKaf43DtbQe8MeLiRm2jm/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2481,7 +2481,8 @@
         "# corroboram na prática exercida colhendo bons resultados.  \n",
         "# Em relação as assertivas 'Q012' e 'Q004' demonstram uma forte para moderada correlação devido aos acompanhamentos, interações e \n",
         "# feedback's diminuindo a sobrecarga.\n",
-        "# Em relação a 'Q008' e 'Q006' demonstram moderada correlação no sentido inverso.      \n",
+        "# Em relação a 'Q008' e 'Q006' demonstram moderada correlação no sentido inverso.\n",
+        "# 'Q002', 'Q003', 'Q005' e 'Q007' com grau de satifação fortemente correlacionadas.       \n",
         "gss.corr(method='pearson')"
       ],
       "execution_count": 367,
