--- a/Grau_Satisfação_Sobrecarga.ipynb
+++ b/Grau_Satisfação_Sobrecarga.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1uRxS-HR5GVn03Tm717Fo5H5FXXZOgSFq",
-      "authorship_tag": "ABX9TyMKaf43DtbQe8MeLiRm2jm/",
+      "authorship_tag": "ABX9TyPD2v9dp+1bQZ7vhn6bD9yP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1638,10 +1638,10 @@
       "metadata": {
         "id": "qmM0m326iUR-",
         "colab_type": "code",
-        "outputId": "15510ea5-2067-41c9-8c33-32e9bc8979cd",
+        "outputId": "be1c0c25-7625-4d69-a9cd-36fd76173ca9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 208
+          "height": 263
         }
       },
       "source": [
@@ -1659,22 +1659,30 @@
         "%matplotlib inline\n",
         "!pip3 install bokeh"
       ],
-      "execution_count": 356,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+            "  import pandas.util.testing as tm\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
             "Requirement already satisfied: bokeh in /usr/local/lib/python3.6/dist-packages (1.4.0)\n",
+            "Requirement already satisfied: tornado>=4.3 in /usr/local/lib/python3.6/dist-packages (from bokeh) (4.5.3)\n",
+            "Requirement already satisfied: PyYAML>=3.10 in /usr/local/lib/python3.6/dist-packages (from bokeh) (3.13)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.6/dist-packages (from bokeh) (2.8.1)\n",
             "Requirement already satisfied: pillow>=4.0 in /usr/local/lib/python3.6/dist-packages (from bokeh) (7.0.0)\n",
             "Requirement already satisfied: numpy>=1.7.1 in /usr/local/lib/python3.6/dist-packages (from bokeh) (1.18.4)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.6/dist-packages (from bokeh) (2.8.1)\n",
-            "Requirement already satisfied: PyYAML>=3.10 in /usr/local/lib/python3.6/dist-packages (from bokeh) (3.13)\n",
-            "Requirement already satisfied: tornado>=4.3 in /usr/local/lib/python3.6/dist-packages (from bokeh) (4.5.3)\n",
-            "Requirement already satisfied: packaging>=16.8 in /usr/local/lib/python3.6/dist-packages (from bokeh) (20.4)\n",
-            "Requirement already satisfied: six>=1.5.2 in /usr/local/lib/python3.6/dist-packages (from bokeh) (1.12.0)\n",
             "Requirement already satisfied: Jinja2>=2.7 in /usr/local/lib/python3.6/dist-packages (from bokeh) (2.11.2)\n",
-            "Requirement already satisfied: pyparsing>=2.0.2 in /usr/local/lib/python3.6/dist-packages (from packaging>=16.8->bokeh) (2.4.7)\n",
-            "Requirement already satisfied: MarkupSafe>=0.23 in /usr/local/lib/python3.6/dist-packages (from Jinja2>=2.7->bokeh) (1.1.1)\n"
+            "Requirement already satisfied: six>=1.5.2 in /usr/local/lib/python3.6/dist-packages (from bokeh) (1.12.0)\n",
+            "Requirement already satisfied: packaging>=16.8 in /usr/local/lib/python3.6/dist-packages (from bokeh) (20.4)\n",
+            "Requirement already satisfied: MarkupSafe>=0.23 in /usr/local/lib/python3.6/dist-packages (from Jinja2>=2.7->bokeh) (1.1.1)\n",
+            "Requirement already satisfied: pyparsing>=2.0.2 in /usr/local/lib/python3.6/dist-packages (from packaging>=16.8->bokeh) (2.4.7)\n"
           ],
           "name": "stdout"
         }
@@ -1711,7 +1719,7 @@
       "metadata": {
         "id": "YvxnuFWYr_dr",
         "colab_type": "code",
-        "outputId": "7b5fb8bd-622c-407e-facd-640d227d81f7",
+        "outputId": "db89aefd-fefc-4cea-f33c-2897fd1b6675",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 574
@@ -1720,7 +1728,7 @@
       "source": [
         "gss.head()"
       ],
-      "execution_count": 359,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1858,7 +1866,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 359
+          "execution_count": 4
         }
       ]
     },
@@ -1880,7 +1888,7 @@
       "metadata": {
         "id": "ogU_GczT6hf7",
         "colab_type": "code",
-        "outputId": "dccd0979-b8ff-4e50-967c-cc9d6d835b48",
+        "outputId": "b3ad68fb-4093-4943-e703-08a6eb5ef3ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
@@ -1889,7 +1897,7 @@
       "source": [
         "gss.head()"
       ],
-      "execution_count": 361,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2027,7 +2035,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 361
+          "execution_count": 6
         }
       ]
     },
@@ -2053,12 +2061,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 347
         },
-        "outputId": "c0fff530-54bc-41e2-b1a9-ae093e4cb3b6"
+        "outputId": "0b94618e-6268-4f2b-e3f4-e76bee8bb2fd"
       },
       "source": [
         "gss.info()"
       ],
-      "execution_count": 363,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -2096,12 +2104,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 238
         },
-        "outputId": "b681541f-8831-46ea-aff5-409ddee13a85"
+        "outputId": "08686e44-3901-4055-b460-c339b8042260"
       },
       "source": [
         "gss.head()"
       ],
-      "execution_count": 364,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2249,7 +2257,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 364
+          "execution_count": 9
         }
       ]
     },
@@ -2258,7 +2266,7 @@
       "metadata": {
         "id": "ZUEijd69_EeD",
         "colab_type": "code",
-        "outputId": "dffbd6ef-c4c7-4bb2-be86-042f24d08abc",
+        "outputId": "d48a3cba-fda8-4288-d1ae-3c98652e500f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 347
@@ -2267,7 +2275,7 @@
       "source": [
         "gss.info()"
       ],
-      "execution_count": 365,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -2301,7 +2309,7 @@
       "metadata": {
         "id": "3G5igwcEt9l1",
         "colab_type": "code",
-        "outputId": "d5866349-e26d-4f87-ea64-63dd60092999",
+        "outputId": "3a6f15ad-f304-49d7-94d8-1a5051f3f916",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
@@ -2310,7 +2318,7 @@
       "source": [
         "gss.isnull()"
       ],
-      "execution_count": 366,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2458,7 +2466,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 366
+          "execution_count": 11
         }
       ]
     },
@@ -2467,7 +2475,7 @@
       "metadata": {
         "id": "qpbUtLLe5APV",
         "colab_type": "code",
-        "outputId": "75d185e3-8fcc-494a-ae7f-d34943b633a8",
+        "outputId": "8ee76b6f-9965-41c2-d607-7f7287615a97",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 426
@@ -2482,10 +2490,11 @@
         "# Em relação as assertivas 'Q012' e 'Q004' demonstram uma forte para moderada correlação devido aos acompanhamentos, interações e \n",
         "# feedback's diminuindo a sobrecarga.\n",
         "# Em relação a 'Q008' e 'Q006' demonstram moderada correlação no sentido inverso.\n",
-        "# 'Q002', 'Q003', 'Q005' e 'Q007' com grau de satifação fortemente correlacionadas.       \n",
+        "# 'Q002', 'Q003', 'Q005' e 'Q007' com grau de satifação fortemente correlacionadas, contudo apenas a 'Q002' de forma moderada inversa \n",
+        "# se correlaciona com a 'Q012' que é bem objetiva sobre a questão da sobrecarga.       \n",
         "gss.corr(method='pearson')"
       ],
-      "execution_count": 367,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2729,7 +2738,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 367
+          "execution_count": 12
         }
       ]
     },
