--- a/Grau_Satisfação_Sobrecarga.ipynb
+++ b/Grau_Satisfação_Sobrecarga.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1uRxS-HR5GVn03Tm717Fo5H5FXXZOgSFq",
-      "authorship_tag": "ABX9TyPD2v9dp+1bQZ7vhn6bD9yP",
+      "authorship_tag": "ABX9TyMFcfZbYlF6+uAerllHkxQV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2488,7 +2488,7 @@
         "# críticas e elogios detectadas em outras assertivas demonstram felicidades, elogios e afirmações de que o treinamento quando ofertado\n",
         "# corroboram na prática exercida colhendo bons resultados.  \n",
         "# Em relação as assertivas 'Q012' e 'Q004' demonstram uma forte para moderada correlação devido aos acompanhamentos, interações e \n",
-        "# feedback's diminuindo a sobrecarga.\n",
+        "# feedback's contudo analisando outras assertivas de satisfação demonstram fraca ou nenhuma correlação com a 'Q012' que trata da sobrecarga.\n",
         "# Em relação a 'Q008' e 'Q006' demonstram moderada correlação no sentido inverso.\n",
         "# 'Q002', 'Q003', 'Q005' e 'Q007' com grau de satifação fortemente correlacionadas, contudo apenas a 'Q002' de forma moderada inversa \n",
         "# se correlaciona com a 'Q012' que é bem objetiva sobre a questão da sobrecarga.       \n",
